--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -1,6 +1,8 @@
 .game-main {
   overflow: hidden;
   height: 100vh;
+  animation: fade-in-game 0.5s linear;
+  opacity: 1;
 }
 
 .game-area-wrapper {
@@ -166,4 +168,13 @@
   margin-right: auto;
   width: 300px;
   height: 250px;
+}
+
+@keyframes fade-in-game {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
