--- a/src/components/StudentDash/StudentDash.css
+++ b/src/components/StudentDash/StudentDash.css
@@ -36,6 +36,7 @@
   z-index: 1000;
   box-shadow: 2px 2px 2px rgba(0, 0, 0.3);
   animation: student-dash-slide 0.3s linear;
+  overflow: hidden;
 }
 
 .student-dash-header {
@@ -57,6 +58,10 @@
   image-rendering: pixelated;
   border: 2px solid #4776bb;
   box-shadow: 1px 1px 1px#4776bb;
+}
+
+.student-dash-avatar-backer:hover {
+  cursor: pointer;
 }
 
 .student-dash-avatar {
@@ -489,4 +494,29 @@
   100% {
     left: 0px;
   }
+}
+
+.no-instrument-warning {
+  font-size: 1.1rem;
+  position: absolute;
+  top: 60px;
+  left: -700px;
+  transition: 0.3s;
+}
+
+.no-instrument-warning.true {
+  left: 50px;
+}
+
+.account-link-text {
+  position: absolute;
+  left: -8px;
+  top: 70px;
+  width: 100px;
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.student-dash-avatar-backer:hover .account-link-text {
+  opacity: 1;
 }
