--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -15,10 +15,10 @@
 }
 
 .login-signup-container {
-  width: 300px;
-  height: 363px;
-  margin: 2rem auto;
-  background: url(./landingframe2.png);
+  width: 341px;
+  height: 431px;
+  margin: 0 auto;
+  background: url(./landingframe3.png);
   background-size: cover;
   image-rendering: pixelated;
   overflow: hidden;
