--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -15,6 +15,10 @@
   overflow: hidden;
 }
 
+.App.true:hover {
+  cursor: wait;
+}
+
 .name-game-student-wrapper {
   position: relative;
   overflow: hidden;
