--- a/src/components/EditAvatar/EditAvatar.css
+++ b/src/components/EditAvatar/EditAvatar.css
@@ -12,8 +12,21 @@
   background: url(../Game/images/offwhite-avatar-backer.png);
   background-size: cover;
   image-rendering: pixelated;
-  border: 2px solid #4776bb;
   box-shadow: 1px 1px 1px#4776bb;
+}
+
+.edit-avatar-circle {
+  position: absolute;
+  height: 82px;
+  width: 82px;
+  background: url(../App/27circle.png);
+  background-size: cover;
+  image-rendering: pixelated;
+  z-index: 300;
+  top: 48px;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 
 .avatar-editor-current-avatar-backer:hover {
