--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -49,7 +49,8 @@
 }
 
 .login-form-button,
-.signup-form-switch-button {
+.signup-form-switch-button,
+.forgot-my-password-link {
   margin: 1rem 0;
   font-family: "chronotype";
   font-size: 1.1rem;
@@ -58,7 +59,7 @@
 }
 
 .signup-form-switch-button {
-  margin: 11rem 0 0 0;
+  margin: 10rem 0 0 0;
 }
 
 .login-form button:hover {
@@ -103,4 +104,30 @@
 
 .login-warning.true {
   left: 0;
+}
+
+.logging-in-message {
+  position: absolute;
+  margin: auto;
+  left: -500px;
+  right: 0;
+  transition: 0.2s;
+}
+
+.logging-in-message.true {
+  left: 0;
+}
+
+.forgot-my-password-link {
+  display: block;
+  position: relative;
+  margin: auto;
+  background: none;
+  border: 0;
+  height: 1.3rem;
+  padding: 0;
+}
+
+.forgot-my-password-link:hover {
+  cursor: pointer;
 }
