Setup calls to helper function

--- a/src/components/ForgotPassword/ForgotPassword.css
+++ b/src/components/ForgotPassword/ForgotPassword.css
@@ -36,6 +36,7 @@
   justify-content: space-between;
   height: 2rem;
   margin-bottom: 3rem;
+  position: relative;
 }
 
 .enter-email-for-new-pw {
@@ -56,4 +57,30 @@
 
 .backup-from-forgot-pw {
   margin-top: 11rem;
+}
+.forgot-pw-lock-icon {
+  position: absolute;
+  background: url(../Landing/images/lock.png);
+  width: 13px;
+  height: 16px;
+  background-size: cover;
+  image-rendering: pixelated;
+  left: 85px;
+  top: 37px;
+}
+
+.pw-sent-success,
+.pw-sent-failure {
+  position: absolute;
+  right: 0;
+  left: 500px;
+  margin: auto;
+  top: 137px;
+  transition: 0.3s;
+  width: 341px;
+}
+
+.pw-sent-success.true,
+.pw-sent-failure.true {
+  left: 0;
 }
